--- a/Taxifahrer/LoginScreenViewController.xib
+++ b/Taxifahrer/LoginScreenViewController.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 49}, {188, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="229963537"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -79,7 +78,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 87}, {188, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="428549223"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -107,7 +105,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{119, 125}, {156, 26}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="239947625"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -181,7 +178,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{77, 266}, {161, 28}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="844528829"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -231,8 +227,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{77, 301}, {59, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="462210081"/>
+						<reference key="NSNextKeyView" ref="900675376"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -257,8 +252,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{77, 232}, {161, 27}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="943478310"/>
+						<reference key="NSNextKeyView" ref="940193478"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -308,7 +302,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{56, 20}, {203, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1056804583"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -354,7 +347,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 52}, {81, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="528674014"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -378,7 +370,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 87}, {81, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="666423442"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -394,12 +385,11 @@
 						<reference key="IBUIFont" ref="241269254"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUILabel" id="943478310">
+					<object class="IBUILabel" id="940193478">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{83, 234}, {155, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="234873188"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -416,19 +406,18 @@
 							<int key="type">1</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="111761696">
+						<object class="NSFont" key="IBUIFont" id="662989044">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUILabel" id="462210081">
+					<object class="IBUILabel" id="900675376">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{80, 269}, {155, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -446,13 +435,12 @@
 							<int key="traits">0</int>
 							<double key="pointSize">15</double>
 						</object>
-						<reference key="IBUIFont" ref="111761696"/>
+						<reference key="IBUIFont" ref="662989044"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="119303284"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">2</int>
@@ -533,7 +521,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">lblPasswortVergessen</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="943478310"/>
+						<reference key="destination" ref="940193478"/>
 					</object>
 					<int key="connectionID">215</int>
 				</object>
@@ -541,7 +529,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">lblNeuRegistrieren</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="462210081"/>
+						<reference key="destination" ref="900675376"/>
 					</object>
 					<int key="connectionID">216</int>
 				</object>
@@ -619,8 +607,8 @@
 							<reference ref="119303284"/>
 							<reference ref="229963537"/>
 							<reference ref="1056804583"/>
-							<reference ref="943478310"/>
-							<reference ref="462210081"/>
+							<reference ref="940193478"/>
+							<reference ref="900675376"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -691,12 +679,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">213</int>
-						<reference key="object" ref="943478310"/>
+						<reference key="object" ref="940193478"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">214</int>
-						<reference key="object" ref="462210081"/>
+						<reference key="object" ref="900675376"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -728,86 +716,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">216</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">LoginScreenViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="buttonGedrueckt:">id</string>
-						<string key="buttonMap:">id</string>
-						<string key="buttonPasswortZuruecksetzen:">id</string>
-						<string key="buttonRegi:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="buttonGedrueckt:">
-							<string key="name">buttonGedrueckt:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="buttonMap:">
-							<string key="name">buttonMap:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="buttonPasswortZuruecksetzen:">
-							<string key="name">buttonPasswortZuruecksetzen:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="buttonRegi:">
-							<string key="name">buttonRegi:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="btnLogin">UIButton</string>
-						<string key="lblEmail">UILabel</string>
-						<string key="lblErgebnis">UILabel</string>
-						<string key="lblNeuRegistrieren">UILabel</string>
-						<string key="lblPasswort">UILabel</string>
-						<string key="lblPasswortVergessen">UILabel</string>
-						<string key="txtPassword">UITextField</string>
-						<string key="txtUsername">UITextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="btnLogin">
-							<string key="name">btnLogin</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblEmail">
-							<string key="name">lblEmail</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblErgebnis">
-							<string key="name">lblErgebnis</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblNeuRegistrieren">
-							<string key="name">lblNeuRegistrieren</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblPasswort">
-							<string key="name">lblPasswort</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lblPasswortVergessen">
-							<string key="name">lblPasswortVergessen</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="txtPassword">
-							<string key="name">txtPassword</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="txtUsername">
-							<string key="name">txtUsername</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/LoginScreenViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
